manifest-abrokes-bitbucket-mirror-commit.yaml
---
# Source: bitbucket/templates/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: abrokes-bitbucket-ssh
  labels:
    helm.sh/chart: bitbucket-1.0.0
    app.kubernetes.io/name: bitbucket
    app.kubernetes.io/instance: abrokes-bitbucket
    app.kubernetes.io/version: "7.15.1-jdk11"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    external-dns.alpha.kubernetes.io/hostname: abrokes-bitbucket-ssh.dcngkube.bbsperf.com
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-type: external
spec:
  type: LoadBalancer
  ports:
    - port: 22
      targetPort: ssh
      protocol: TCP
      name: ssh
  selector:
    app.kubernetes.io/name: bitbucket
    app.kubernetes.io/instance: abrokes-bitbucket
---
# Source: bitbucket/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abrokes-bitbucket
  labels:
    helm.sh/chart: bitbucket-1.0.0
    app.kubernetes.io/name: bitbucket
    app.kubernetes.io/instance: abrokes-bitbucket
    app.kubernetes.io/version: "7.15.1-jdk11"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 7999
      targetPort: ssh
      protocol: TCP
      name: ssh
    - port: 5701
      targetPort: hazelcast
      protocol: TCP
      name: hazelcast
  selector:
    app.kubernetes.io/name: bitbucket
    app.kubernetes.io/instance: abrokes-bitbucket
---
# Source: bitbucket/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: abrokes-bitbucket
  labels:
    helm.sh/chart: bitbucket-1.0.0
    app.kubernetes.io/name: bitbucket
    app.kubernetes.io/instance: abrokes-bitbucket
    app.kubernetes.io/version: "7.15.1-jdk11"
    app.kubernetes.io/managed-by: Helm
    
spec:
  replicas: 2
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  serviceName: abrokes-bitbucket
  selector:
    matchLabels:
      app.kubernetes.io/name: bitbucket
      app.kubernetes.io/instance: abrokes-bitbucket
  template:
    metadata:
      annotations:
        checksum/config-jvm: 5fcd70a7727cfeb41b983c9361ab0e41cdff2dfdbdc757aa168d9959db5ca26c
      labels:
        app.kubernetes.io/name: bitbucket
        app.kubernetes.io/instance: abrokes-bitbucket
    spec:
      serviceAccountName: abrokes-bitbucket
      terminationGracePeriodSeconds: 35
      securityContext:
        
        
        fsGroup: 2003
      containers:
        - name: bitbucket
          image: "atlassian/bitbucket:7.15.1-jdk11"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7990
              protocol: TCP
            - name: ssh
              containerPort: 7999
              protocol: TCP
            - name: hazelcast
              containerPort: 5701
              protocol: TCP
          readinessProbe:
            httpGet:
              port: 7990
              path: "/status"
            periodSeconds: 5
            failureThreshold: 60
            initialDelaySeconds: 10
          volumeMounts:
            - name: local-home
              mountPath: "/var/atlassian/application-data/bitbucket"
            - name: shared-home
              mountPath: "/var/atlassian/application-data/shared-home"
            
            
            
          resources:
            requests:
              cpu: "2"
              memory: 3G
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "/shutdown-wait.sh"]
        
        
        
      nodeSelector:
        node_purpose: ci
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/instance: abrokes-bitbucket-nfs
            topologyKey: topology.kubernetes.io/zone
      volumes:
        
        
        - name: shared-home
          persistentVolumeClaim:
            claimName: abrokes-bitbucket-shared-home
        
        
        
        
        
  
  
  volumeClaimTemplates:
  - metadata:
      name: local-home
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
# Source: bitbucket/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abrokes-bitbucket
  labels:
    helm.sh/chart: bitbucket-1.0.0
    app.kubernetes.io/name: bitbucket
    app.kubernetes.io/instance: abrokes-bitbucket
    app.kubernetes.io/version: "7.15.1-jdk11"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    "kubernetes.io/ingress.class": nginx
  
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:342470128466:certificate/945e344c-2eb8-49ee-8612-dfc8cddc8b28
    alb.ingress.kubernetes.io/healthcheck-path: /status
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=86400
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: abrokes-bitbucket.dcngkube.bbsperf.com
    kubernetes.io/ingress.class: alb
spec:

  rules:
    - host: abrokes-bitbucket.dcngkube.bbsperf.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abrokes-bitbucket
                port:
                  number: 80
